# agentic-applications

./: README.md  pyproject.toml
code/: agent-example.ipynb  agent-example.py  demo_code.py  get_url.py  multiagent-example.py  scratch.ipynb  scratchpad.ipynb  scratchpad.py
ppt/: agentic-ai.pptx
